--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.14)
 
 project(Asteroids VERSION 1.0)
 
@@ -15,3 +15,6 @@ set(SFML_LIBS sfml-graphics sfml-system sfml-window)
 target_link_libraries(${PROJECT_NAME} PUBLIC ${SFML_LIBS})
 
 target_include_directories(${PROJECT_NAME} PRIVATE "include")
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/fonts DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/images DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
